fixed spacing on about us

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,7 @@ h3{
    margin: auto;
    text-align: center;
    padding-top: 50px;
+   color: rgba(0, 0, 0, 0.719);
 }
 .about-col{
    flex-basis: 32%;
@@ -193,7 +194,7 @@ h3{
    width: 100%;
    position: absolute;
    top: 0;
-   left: 0;
+   left: 0px;
    transition: 0.5s;
 }
 .layer:hover{
